2004-06-01 Magnus Hagdorn
 * new documentation structure

2004-05-24 Magnus Hagdorn
 * added some standard name attributes (ncdf_file.f90.in, ncdf_vars.def)
	
2004-05-24 Magnus Hagdorn
 * g_land.gln: removed outs namelist
 * glimmer_global.f90: added version string
 * ncdf_file.f90.in, generate_ncvars.py: renamed loop index sp to spot
 * glimmer_config.f90: fixed silly bug
 * added global meta data to netCDF output (g_land.glw, ncdf.f90.in, ncdf_file.f90.in, ncdf_params.f90.in)
	
2004-05-18 Magnus Hagdorn
 * added integer and real array parameters (test_config.conf, glimmer_config.f90, test_config.f90)
 * removed indices0dx and indices0dy (glimmer_setup.f90, glimmer_restart.f90, glimmer_modu.f90)
 * fully implemented spot variables (ncdf.f90.in, ncdf_file.f90.in, ncdf_params.f90.in, ncdf_vars.def, generate_ncvars.py)
	
2004-05-18 Magnus Hagdorn
 * initialised pointers to NULL() to fix segfault with NAG compiler (ncdf_params.f90.in)
 * added debug flags to makefile.nag

2004-05-17 Magnus Hagdorn
 * working around silly problem with Intel compiler. I am still not quite sure what the problem is,
   but config reader API had to be changed from functions to subroutines
   (glimmer_config.f90, test_config.f90, ncdf_params.f90.in)
 * makefile.ifc: added DEBUG flags, renamed compiler to ifort
 * replaced binary input files g20lati, g20prcp, g20relx, g20surf, g20thck, g20topg with netCDF input
   file g_land.input.nc. This is also reflected in netCDF control file (g_land.glw)
	
2004-05-14 Magnus Hagdorn
 netCDF input, Round 1
 * add netCDF input capabilities, removed old I/O bits
	
2004-05-14 Magnus Hagdorn
 netCDF output, Round 1
 * glimmer/data: output file configuration format changed to something similar to Windows .ini files (g_land.glw)
                 added a new directory containg test data files (test/test_config.conf)
 * new configuration file parser (glimmer_config.f90/test_config.f90)